--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,3 +1,6 @@
+<h1>My first webpage</h1>
+<h2>Written in honor of the flying spaghetti monster</h2>
+
 <p>This is my first webpage</p>
 <p>Isn't it nice</p>
 
@@ -7,5 +10,5 @@
   it's much easier to read our code if we indent the multiple lines of text within our paragraph tags.
   in other words, we add a p tag, and have a line break and indent and then a dd our text.
 
-  Also The voices that controlled me from inside my head say there should be more text here
+  Also The voices that control me from inside my head say there should be more text here
 </p>
