add list elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -12,3 +12,11 @@
 
   Also The voices that control me from inside my head say there should be more text here
 </p>
+
+<p>Here are some things I'm going to learn about coding</p>
+<ul>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+  <li>And a lot more!</li>
+</ul>
