--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,22 +1,30 @@
-<h1>My first webpage</h1>
-<h2>Written in honor of the flying spaghetti monster</h2>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <title>Web page #1!</title>
+</head>
+<body>
+  <h1>My first webpage</h1>
+  <h2>Written in honor of the flying spaghetti monster</h2>
 
-<p>This is my first webpage</p>
-<p>Isn't it nice</p>
+  <p>This is my first webpage</p>
+  <p>Isn't it nice</p>
 
-<p>
-  This is a lot of text which means it spans multiple lines. 
-  When text spans multiple lines like this,
-  it's much easier to read our code if we indent the multiple lines of text within our paragraph tags.
-  in other words, we add a p tag, and have a line break and indent and then a dd our text.
+  <p>
+    This is a lot of text which means it spans multiple lines. 
+    When text spans multiple lines like this,
+    it's much easier to read our code if we indent the multiple lines of text within our paragraph tags.
+    in other words, we add a p tag, and have a line break and indent and then a dd our text.
 
-  Also The voices that control me from inside my head say there should be more text here
-</p>
+    Also The voices that control me from inside my head say there should be more text here
+  </p>
 
-<p>Here are some things I'm going to learn about coding</p>
-<ul>
-  <li>HTML</li>
-  <li>CSS</li>
-  <li>JavaScript</li>
-  <li>And a lot more!</li>
-</ul>
+  <p>Here are some things I'm going to learn about coding</p>
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>And a lot more!</li>
+  </ul>
+</body>
+</html>
