Added missing images and hyperlinks to no where

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -8,12 +8,33 @@
   <h2>These are just a few of the things the dark Lord likes</h2>
 
   <h3>People</h3>
-  <p>These are some my favorite snacks</p>
+  <p>These are some the Lord of shadows favorite snacks</p>
     <ul>
-      <li>Orphans</li>
-      <li>Widows/widowers the dark Lord is progressive about the gender of his snacks</li>
-      <li>Heroes</li>
-      <li>Villains who fail him</li>
+      <li>
+        <a href="http://www.example.com/Charred-orphans.html">
+          Orphans extra <strong>crispy</strong>
+          <img src="img/Yummy-orphans.jpeg" alt="Tasty orphans">
+        </a>
+      </li>
+      <li>
+        Widows/widowers the dark Lord is progressive about the gender of his snacks
+        <a href="http://www.example.com/Crying-peasants">
+          <strong>It's the grieving that really gives them the strong aftertaste</strong>
+          <img src="img/Horrible-image-number-12.jpeg" alt="Random widow">
+        </a>
+      </li>
+      <li>
+        <a href="http://www.example.com/On-heroism">
+          <strong>Heroes</strong> of all kinds
+          <img src="img/Self-righteous-fool" alt="Random hero">
+        </a>
+      </li>
+      <li>
+        <a href="http://www.example.com/On-failure">
+          Villains who <strong> fail</strong> him
+          <img src="img/Sacrifice-42" alt="Hopefully not you">
+        </a>
+      </li>
     </ul>
   <h3>Flavors of ice cream</h3>
   <p>These are his three favorite flavors, in order</p>
