Added EM and Strong tags

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <h1>My first webpage</h1>
-    <h2>Written in honor of the flying spaghetti monster</h2>
+    <h2>Written in honor of the spaghetti monster</h2>
 
-    <p>This is my first webpage</p>
+    <p><strong>This is my first webpage</strong></p>
     <p>Isn't it nice</p>
 
     <p>
@@ -16,7 +16,7 @@
       it's much easier to read our code if we indent the multiple lines of text within our paragraph tags.
       in other words, we add a p tag, and have a line break and indent and then a dd our text.
 
-      Also The voices that control me from inside my head say there should be more text here
+      <em>Also The voices that control me from inside my head say there should be more text here</em>
     </p>
 
     <p>Here are some things I'm going to learn about coding</p>
